--- a/schema-based-animator/schema-based-animator.csproj
+++ b/schema-based-animator/schema-based-animator.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="FFMpegCore" Version="4.6.0" />
+    <PackageReference Include="System.Drawing.Common" Version="6.0.0" />
   </ItemGroup>
 
 </Project>
