--- a/schema-based-animator/schema-based-animator.csproj
+++ b/schema-based-animator/schema-based-animator.csproj
@@ -6,4 +6,8 @@
     <RootNamespace>schema_based_animator</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Drawing.Common" Version="6.0.0" />
+  </ItemGroup>
+
 </Project>
